--- a/baba-g-css.css
+++ b/baba-g-css.css
@@ -1398,6 +1398,7 @@ li.additional_information_tab {
     #one {
         font-size: 50px;
     }
+}
 
 @media only screen and (max-width: 600px) {
    
