--- a/baba-g-css.css
+++ b/baba-g-css.css
@@ -38,6 +38,31 @@ button, .button {
     text-shadow: 1px 1px 1px black;
 }
 
+/* Recipe Page */
+.post-password-form {
+    text-align: center;
+}
+#custom_html-42 {
+    margin-bottom: 50px;
+}
+#recipe-page-title {
+    text-align: center; 
+    font-size: 46px; 
+    font-weight: 600; 
+    margin: 30px 0px;
+}
+#recipe-page-wrapper {
+    margin: 0px 5% 30px 5%;
+}
+#recipe-image-one-div {
+    width:48%; 
+    float: left;
+}
+#recipe-image-two-div {
+    width: 48%; 
+    float: right;
+}
+
 
 /* Steps 1-4 on Homepage */
 #optimizer_front_blocks-26 .axn_block1 {background-color: #ec008c; max-height: 300px; padding: 1% 2%; box-shadow: 9px 9px 29px #000000;}
@@ -792,26 +817,44 @@ li.additional_information_tab {
 }
 
 /* About Us */
-.about-us-page-quotes {
-    margin-top: 40px; 
-    background-color: #000; 
-    text-align: center; 
-    font-size: 78px; 
-    font-weight: 600; 
-    text-shadow: 2px 1px #ec008c; 
-    font-style: italic; 
-    color: #ffffff; 
-    padding-top: 120px; 
-    padding-bottom: 120px; 
-    padding-left: 200px; 
-    padding-right: 200px;
+.about-us-page-quotes-wrapper {
+    margin-top: 40px;
+    margin-bottom: 30px; 
+    text-align: center;  
+    padding-top: 80px; 
+    padding-bottom: 80px; 
+    padding-left: 150px; 
+    padding-right: 150px;
     color: #ffd020;
     background-color: #009EE2;
 }
-
+#about-us-combining-text {
+    font-size: 78px; 
+    font-weight: 600; 
+    text-shadow: 2px 1px #ec008c; 
+    font-style: italic;
+}
+#about-us-be-the-baba {
+    font-size: 78px; 
+    font-weight: 600; 
+    text-shadow: 2px 1px #ec008c; 
+    font-style: italic;
+}
+#about-us-best-things-in-life {
+    font-size: 78px; 
+    font-weight: 600; 
+    text-shadow: 2px 1px #ec008c; 
+    font-style: italic;
+}
 .about-us-page-text-blocks {
     font-size: 18px;
     line-height: 1.5;
+}
+#about-us-candy-cannabis-title {
+    font-size: 36px;
+    margin-bottom: 25px;
+    font-weight: 600; 
+    text-shadow: 2px 1px #ec008c;
 }
 
 
@@ -1050,6 +1093,14 @@ li.additional_information_tab {
 }
 
 
+/* Cart Page */
+/* hide "this is only an estimate" */
+.woocommerce-shipping-totals td p.woocommerce-shipping-destination {
+    display: none;
+}
+
+
+
 
 /* add to cart button style */
 .woocommerce div.product form.cart .button {
@@ -1076,7 +1127,20 @@ li.additional_information_tab {
     #potencyTherm {
         width: 50%;
     }
+    #recipe-image-one-div {
+        width: 60%; 
+        float: none; 
+        margin: auto;
+    }
+    #recipe-image-two-div {
+        width: 60%;
+        float: none;
+        margin: auto;
+        margin-top: 20px;
+    }
 }
+
+
 
 @media screen and (max-width: 1024px) {
     #footer-contact-wrapper {
@@ -1097,12 +1161,22 @@ li.additional_information_tab {
     }
 }
 
+@media screen and (max-width: 983px) {
+    .about-us-page-quotes-wrapper {
+        padding-right: 110px;
+        padding-left: 110px;
+    }
+}
+
+
 
 @media screen and (max-width: 975px) {
     #potencyTherm {
         width: 58%;
     }
 }
+
+
 
 
 @media screen and (max-width: 960px) {
@@ -1120,6 +1194,8 @@ li.additional_information_tab {
         line-height: 1;
     }
 }
+
+
 
 
 @media screen and (max-width: 910px) {
@@ -1154,6 +1230,12 @@ li.additional_information_tab {
         left: 0;
         width: 40%;
     }
+    #recipe-image-one-div {
+        width: 80%;
+    }
+    #recipe-image-two-div {
+        width: 80%;
+    }
 }
 
 
@@ -1187,6 +1269,8 @@ li.additional_information_tab {
 }
 
 
+
+
 @media screen and (max-width: 854px) {
     #ast_instagram {
         padding: 80px 40px;
@@ -1206,6 +1290,8 @@ li.additional_information_tab {
 }
 
 
+
+
 @media screen and (max-width: 804px) {
     #one-to-fifteen {
         font-size: 58px;
@@ -1222,22 +1308,21 @@ li.additional_information_tab {
 }
 
 
-@media only screen and (max-width: 800px) {
-    
+@media screen and (max-width: 800px) {
     #we-believe-text {
         font-size: 40px;
   	padding-right: 12px;
     }
-    /*#front-page-title {
-        font-size: 40px;
-        line-height: 65px;
-    }*/
     #front-page-kit-image-title {
         font-size: 44px;
     }
     /* product gallery refill text info */
     .post-191 a h2 {
         margin-top: 25px !important;
+    }
+    .about-us-page-quotes-wrapper {
+        padding-left: 60px;
+        padding-right: 60px;
     }
 }
 
@@ -1252,6 +1337,9 @@ li.additional_information_tab {
         padding: 0px 100px;
     }
 }
+
+
+
 
 @media screen and (max-width: 760px) {
     #terms-policy-wrapper {
@@ -1332,7 +1420,15 @@ li.additional_information_tab {
     #front-page-p {
         font-size: 18px;
     }
+    #recipe-image-one-div {
+        width: 100%;
+    }
+    #recipe-image-two-div {
+        width: 100%;
+    }
 }
+
+
 
 @media screen and (max-width: 656px) {
     #one-to-fifteen {
@@ -1365,9 +1461,19 @@ li.additional_information_tab {
     }
 }
 
-@media only screen and (max-width: 630px) {
+@media screen and (max-width: 630px) {
     .widget_slider_content {
         display: none;
+    }
+}
+
+
+@media screen and (max-width: 629px) {
+    #about-us-combining-text {
+        font-size: 68px;
+    }
+    #about-us-best-things-in-life {
+        font-size: 68px; 
     }
 }
 
@@ -1409,9 +1515,13 @@ li.additional_information_tab {
     }
 }
 
-@media only screen and (max-width: 566px) {
+@media screen and (max-width: 566px) {
     #diy-fyi-text {
         padding: 0px 30px;
+    }
+    .about-us-page-quotes-wrapper {
+        padding-right: 20px;
+        padding-left: 20px;
     }
 }
 
@@ -1469,6 +1579,9 @@ li.additional_information_tab {
     }
     #front-page-p {
         font-size: 28px;
+    }
+    #recipe-page-wrapper {
+        margin: 0px 10px 30px 10px;
     }
 }
 
@@ -1545,6 +1658,15 @@ li.additional_information_tab {
     }
 }
 
+@media screen and (max-width: 486px) {
+    #about-us-combining-text {
+        font-size: 60px;
+    }
+    #about-us-best-things-in-life {
+        font-size: 60px;
+    }
+}
+
 @media only screen and (max-width: 484px) {
     #one-to-fifteen {
         font-size: 36px;
@@ -1613,6 +1735,18 @@ li.additional_information_tab {
     }
 }
 
+
+@media screen and (max-width: 435px) {
+    #about-us-best-things-in-life {
+        font-size: 56px;
+    }
+    #about-us-combining-text {
+        font-size: 56px;
+    }
+    #about-us-be-the-baba {
+        font-size: 66px;
+    }
+}
 
 
 @media only screen and (max-width: 418px) {
@@ -1687,5 +1821,17 @@ li.additional_information_tab {
     .woocommerce-form-coupon-toggle .woocommerce-info {
         width: 260px;
         font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 329px) {
+    #about-us-combining-text {
+        font-size: 50px;
+    }
+    #about-us-be-the-baba {
+        font-size: 60px;
+    }
+    #about-us-best-things-in-life {
+        font-size: 50px;
     }
 }
